# ibmtss

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  LICENSE  Makefile.am  README  autogen.sh  build.sh  configure.ac  ibmtss.doc  ibmtss.docx  ibmtss.html  tss2.spec
ci/: alpine.sh  alt.sh  debian.cross-compile.sh  debian.i386.sh  debian.sh  fedora.sh  install-ibmtpm.sh  tumbleweed.sh
demo/: IBM-TSS-Demo.doc  admin.php  demo.css  footer.html  halgsha1.inc  halgsha256.inc  handles.php  index.php  keycreate.php  (+13 more)
utils/: CommandAttributeData.c  CommandAttributeData12.c  CommandAttributes.h  Commands.c  Commands12.c  Commands12_fp.h  Commands_fp.h  CpriCryptPri_fp.h  CpriDataEcc.h  CpriECC_fp.h  CpriHash.c  CpriHashData.c  CpriMisc_fp.h  CpriRNG_fp.h  CpriRSA_fp.h  CpriSym.c  CpriSym_fp.h  CryptoEngine.h  Makefile.am  MathFunctions_fp.h  OsslCryptoEngine.h  Platform.h  TpmError.h  Unmarshal.c  Unmarshal12.c  activatecredential.c  bool.h  certify.c  certifycreation.c  certifyx509.c  changeeps.c  changepps.c  clear.c  clearcontrol.c  clockrateadjust.c  clockset.c  commit.c  contextload.c  contextsave.c  create.c  (+185 more)
utils/certificates/: NPCTxxxECC384LeafCA012110.pem  NPCTxxxECC384LeafCA012111.pem  NPCTxxxECC384LeafCA022110.pem  NPCTxxxECC384LeafCA022111.pem  NPCTxxxECC521RootCA.pem  NuvotonTPMRootCA1111.pem  NuvotonTPMRootCA1210.pem  NuvotonTPMRootCA2111.pem  NuvotonTPMRootCA2112.pem  NuvotonTPMRootCA2210.pem  NuvotonTPMRootCA2211.pem  amd51ADE34A2F8253525E2321AD63F7B197.pem  amdD30EE6F7557055BA66AD1A1DD1157D2C.pem  cacert.pem  cacertecc.pem  rootcerts.txt  rootcerts.windows.txt  stmtpmeccint01.pem  stmtpmekint01.pem  stmtpmekint02.pem  stmtpmekint03.pem  stmtpmekint04.pem  stmtpmekint05.pem
utils/ibmtss/: CertifyX509_fp.h  GetCapability12_fp.h  Implementation.h  NTC_fp.h  NV_DefineSpace12_fp.h  NV_WriteValueAuth_fp.h  OSAP_fp.h  PCR_Reset12_fp.h  Parameters.h  PcrRead12_fp.h  PolicyAuthorizeNV_fp.h  PolicyCapability_fp.h  PolicyParameters_fp.h  SetPrimaryPolicy_fp.h  TPM_Types.h  TpmBuildSwitches.h  Unmarshal12_fp.h  Unmarshal_fp.h  tpmconstants12.h  tpmstructures12.h  tpmtypes12.h  tss.h  tsscrypto.h  tsscryptoh.h  tsserror.h  tsserror12.h  tssfile.h  tssmarshal.h  tssmarshal12.h  tssprint.h  tssprintcmd.h  tsstransmit.h  tssutils.h
utils/man/man1/: tssactivatecredential.1  tsscertify.1  tsscertifycreation.1  tsscertifyx509.1  tsschangeeps.1  tsschangepps.1  tssclear.1  tssclearcontrol.1  tssclockrateadjust.1  tssclockset.1  tsscommit.1  tsscontextload.1  tsscontextsave.1  tsscreate.1  tsscreateek.1  tsscreateekcert.1  tsscreateloaded.1  tsscreateprimary.1  tssdictionaryattacklockreset.1  tssdictionaryattackparameters.1  tssduplicate.1  tsseccdecrypt.1  tsseccencrypt.1  tsseccparameters.1  tssecephemeral.1  tssencryptdecrypt.1  tsseventextend.1  tsseventsequencecomplete.1  tssevictcontrol.1  tssflushcontext.1  tssgetcapability.1  tssgetcommandauditdigest.1  tssgetcryptolibrary.1  tssgetrandom.1  tssgetsessionauditdigest.1  tssgettestresult.1  tssgettime.1  tsshash.1  tsshashsequencestart.1  tsshierarchychangeauth.1  (+84 more)
utils/policies/: Policies.txt  p384privkey.pem  p384pubkey.pem  pnhnamehash.txt  policyauthorize.txt  policycapargsrevision183.txt  policycaprevision183.txt  policyccnvextend.txt  policyccnvread.txt  policyccpolicynv.txt  policycountertimer.txt  policycountertimerargs.txt  policycphash.txt  policydupsel-yes.txt  policynamehash.txt  policynvnv.txt  policynvsetbitsnone.txt  policyor1.txt  policyor2-8.txt  policyornvrep.txt  policyparametersnvsetbitsone.txt  policyparametersor9.txt  policypcr.txt  policysigned.txt
utils/regtests/: initkeys.bat  initkeys.sh  inittpm.bat  inittpm.sh  testaes.bat  testaes.sh  testaes138.bat  testaes138.sh  testattest.bat  testattest.sh  testattest155.bat  testattest155.sh  testbind.bat  testbind.sh  testchangeauth.bat  testchangeauth.sh  testchangeseed.bat  testchangeseed.sh  testclocks.bat  testclocks.sh  testcontext.bat  testcontext.sh  testcreateloaded.bat  testcreateloaded.sh  testcredential.bat  testcredential.sh  testda.bat  testda.sh  testdevel.sh  testdup.bat  testdup.sh  testecc.bat  testecc.sh  testencsession.bat  testencsession.sh  testevent.bat  testevent.sh  testevict.bat  testevict.sh  testgetcap.bat  (+41 more)
utils/tss2/: ActivateCredential_fp.h  ActivateIdentity_fp.h  BaseTypes.h  CertifyCreation_fp.h  Certify_fp.h  ChangeEPS_fp.h  ChangePPS_fp.h  ClearControl_fp.h  Clear_fp.h  ClockRateAdjust_fp.h  ClockSet_fp.h  CommandCodeAttributes_fp.h  Commit_fp.h  ContextLoad_fp.h  ContextSave_fp.h  CpriHash_fp.h  CreateEndorsementKeyPair_fp.h  CreateLoaded_fp.h  CreatePrimary_fp.h  CreateWrapKey_fp.h  Create_fp.h  DictionaryAttackLockReset_fp.h  DictionaryAttackParameters_fp.h  Duplicate_fp.h  ECC_Parameters_fp.h  ECDH_KeyGen_fp.h  ECDH_ZGen_fp.h  EC_Ephemeral_fp.h  EncryptDecrypt2_fp.h  EncryptDecrypt_fp.h  EventSequenceComplete_fp.h  EvictControl_fp.h  Extend_fp.h  FlushContext_fp.h  FlushSpecific_fp.h  GetCapability12_fp.h  GetCapability_fp.h  GetCommandAuditDigest_fp.h  GetRandom_fp.h  GetSessionAuditDigest_fp.h  (+122 more)
utils12/: Makefile.am  activateidentity.c  createekcert.c  createendorsementkeypair.c  createwrapkey.c  ekutils12.c  ekutils12.h  eventextend.c  extend.c  flushspecific.c  getcapability.c  imaextend.c  loadkey2.c  makeekblob.c  makefile  makefile-common  makefiletpmc  makeidentity.c  nvdefinespace.c  nvreadvalue.c  nvreadvalueauth.c  nvwritevalue.c  nvwritevalueauth.c  oiap.c  osap.c  ownerreadinternalpub.c  ownersetdisable.c  pcrread.c  quote2.c  reg.sh  sign.c  startup.c  takeownership.c  tpminit.c
utils12/man/man1/: tss1activateidentity.1  tss1createekcert.1  tss1createendorsementkeypair.1  tss1createwrapkey.1  tss1eventextend.1  tss1extend.1  tss1flushspecific.1  tss1getcapability.1  tss1imaextend.1  tss1loadkey2.1  tss1makeekblob.1  tss1makeidentity.1  tss1nvdefinespace.1  tss1nvreadvalue.1  tss1nvreadvalueauth.1  tss1nvwritevalue.1  tss1nvwritevalueauth.1  tss1oiap.1  tss1osap.1  tss1ownerreadinternalpub.1  tss1ownersetdisable.1  tss1pcrread.1  tss1quote2.1  tss1sign.1  tss1startup.1  tss1takeownership.1  tss1tpminit.1
(+314 files in other folders)
